기타조회api추가
